--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
         @apply font-bold hover:text-pink-500
     }
     .title{
-        @apply absolute md:top-20 top-8 tracking-[20px] text-center uppercase my-5
+        @apply absolute md:top-20 top-8 tracking-[5px] text-center text-2xl uppercase my-5
     }
     .underlineStyle{
         @apply underline decoration-pink-500
